--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "illuminate/support": "^8",
+        "inertiajs/inertia-laravel": "^0.4"
+    }
+  
 }
