--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": ">=7.4",
         "illuminate/support": "^8",
         "inertiajs/inertia-laravel": "^0.4"
     }
